# django-holiday-api

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
backend/: settings.py  urls.py
tests/: test_api_destinations.py  test_api_geocode.py  test_api_schedules.py  test_api_schedules_weather.py  test_api_weather.py  test_endpoints.py  test_health.py  test_models.py  test_throttling.py
trips/: models.py  serializers.py  serializers_geocode.py  serializers_weather.py  urls.py  views.py
trips/migrations/: 0001_initial.py
trips/services/: geocoding.py  weather.py
